gcc/testsuite/g++.dg/init/array45.C
int a[];  // { dg-error "5:storage size" }
